don't force default security